Fixes Сделал общий фильтр на дженериках